<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <TextView
        android:id="@+id/fsf_tv"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="24dp"
        android:text="@string/sign_up_tv"
        android:textAppearance="@style/Base.TextAppearance.AppCompat.Title"
        android:textColor="@color/colorPrimaryDark"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <android.support.design.widget.TextInputLayout
        android:id="@+id/fsf_name_layout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginEnd="24dp"
        android:layout_marginStart="24dp"
        android:layout_marginTop="8dp"
        app:errorEnabled="true"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/fsf_tv">

        <android.support.design.widget.TextInputEditText
            android:id="@+id/fsf_name"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:hint="@string/sign_up_name"
            android:textAppearance="@style/Base.TextAppearance.AppCompat.Subhead" />

    </android.support.design.widget.TextInputLayout>

    <android.support.design.widget.TextInputLayout
        android:id="@+id/fsf_surname_layout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginEnd="24dp"
        android:layout_marginStart="24dp"
        app:errorEnabled="true"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/fsf_name_layout">

        <android.support.design.widget.TextInputEditText
            android:id="@+id/fsf_surname"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:hint="@string/sign_up_surname"
            android:textAppearance="@style/Base.TextAppearance.AppCompat.Subhead" />

    </android.support.design.widget.TextInputLayout>

    <android.support.design.widget.TextInputLayout
        android:id="@+id/fsf_email_layout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginEnd="24dp"
        android:layout_marginStart="24dp"
        app:errorEnabled="true"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/fsf_surname_layout">

        <android.support.design.widget.TextInputEditText
            android:id="@+id/fsf_email"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:hint="@string/sign_up_email"
            android:inputType="textEmailAddress"
            android:textAppearance="@style/Base.TextAppearance.AppCompat.Subhead" />

    </android.support.design.widget.TextInputLayout>


    <android.support.design.widget.TextInputLayout
        android:id="@+id/fsf_department_layout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginEnd="24dp"
        android:layout_marginStart="24dp"
        app:errorEnabled="true"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/fsf_email_layout">

        <android.support.design.widget.TextInputEditText
            android:id="@+id/fsf_department"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:focusable="false"
            android:hint="@string/sign_up_department"
            android:inputType="number"
            android:textAppearance="@style/Base.TextAppearance.AppCompat.Subhead" />

    </android.support.design.widget.TextInputLayout>

    <TextView
        android:id="@+id/fsf_next_button"
        android:layout_width="256dp"
        android:layout_height="43dp"
        android:layout_marginBottom="24dp"
        android:layout_marginEnd="8dp"
        android:layout_marginStart="8dp"
        android:background="@drawable/button_golden_color_background"
        android:gravity="center"
        android:text="@string/next_button"
        android:textAppearance="@style/Base.TextAppearance.AppCompat.Title"
        android:textColor="@color/white"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent" />

</android.support.constraint.ConstraintLayout>