<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_marginBottom="8dp"
        app:layout_constraintBottom_toTopOf="@+id/fes_save_button"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <android.support.constraint.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <android.support.design.widget.TextInputLayout
                android:id="@+id/fes_surname_layout"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginEnd="24dp"
                android:layout_marginStart="24dp"
                android:layout_marginTop="24dp"
                app:errorEnabled="true"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintHorizontal_bias="0.0"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent">

                <android.support.design.widget.TextInputEditText
                    android:id="@+id/fes_surname"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:hint="@string/staff_surname"
                    android:textAppearance="@style/Base.TextAppearance.AppCompat.Subhead" />

            </android.support.design.widget.TextInputLayout>

            <android.support.design.widget.TextInputLayout
                android:id="@+id/fes_name_layout"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginEnd="24dp"
                android:layout_marginStart="24dp"
                app:errorEnabled="true"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintHorizontal_bias="0.0"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/fes_surname_layout">

                <android.support.design.widget.TextInputEditText
                    android:id="@+id/fes_name"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:hint="@string/staff_name"
                    android:textAppearance="@style/Base.TextAppearance.AppCompat.Subhead" />

            </android.support.design.widget.TextInputLayout>

            <android.support.design.widget.TextInputLayout
                android:id="@+id/fes_patronymic_layout"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginEnd="24dp"
                android:layout_marginStart="24dp"
                app:errorEnabled="true"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintHorizontal_bias="0.0"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/fes_name_layout">

                <android.support.design.widget.TextInputEditText
                    android:id="@+id/fes_patronymic"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:hint="@string/staff_patronymic"
                    android:textAppearance="@style/Base.TextAppearance.AppCompat.Subhead" />

            </android.support.design.widget.TextInputLayout>

            <android.support.design.widget.TextInputLayout
                android:id="@+id/fes_department_layout"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginEnd="24dp"
                android:layout_marginStart="24dp"
                app:errorEnabled="true"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintHorizontal_bias="0.0"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/fes_patronymic_layout">

                <android.support.design.widget.TextInputEditText
                    android:id="@+id/fes_department"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:focusable="false"
                    android:hint="@string/staff_department"
                    android:textAppearance="@style/Base.TextAppearance.AppCompat.Subhead" />

            </android.support.design.widget.TextInputLayout>


            <android.support.design.widget.TextInputLayout
                android:id="@+id/fes_position_layout"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginEnd="24dp"
                android:layout_marginStart="24dp"
                app:errorEnabled="true"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintHorizontal_bias="0.0"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/fes_department_layout">

                <android.support.design.widget.TextInputEditText
                    android:id="@+id/fes_position"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:hint="@string/staff_position_edit"
                    android:textAppearance="@style/Base.TextAppearance.AppCompat.Subhead" />

            </android.support.design.widget.TextInputLayout>


            <android.support.design.widget.TextInputLayout
                android:id="@+id/fes_description_layout"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginEnd="24dp"
                android:layout_marginStart="24dp"
                app:errorEnabled="true"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintHorizontal_bias="0.0"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/fes_position_layout">

                <android.support.design.widget.TextInputEditText
                    android:id="@+id/fes_description"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:hint="@string/staff_description"
                    android:textAppearance="@style/Base.TextAppearance.AppCompat.Subhead" />

            </android.support.design.widget.TextInputLayout>

            <android.support.design.widget.TextInputLayout
                android:id="@+id/fes_phone_number_layout"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginEnd="24dp"
                android:layout_marginStart="24dp"
                app:errorEnabled="true"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintHorizontal_bias="0.0"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/fes_description_layout">

                <android.support.design.widget.TextInputEditText
                    android:id="@+id/fes_phone_number"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:hint="@string/staff_phone_number"
                    android:textAppearance="@style/Base.TextAppearance.AppCompat.Subhead" />

            </android.support.design.widget.TextInputLayout>

            <android.support.design.widget.TextInputLayout
                android:id="@+id/fes_email_layout"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginEnd="24dp"
                android:layout_marginStart="24dp"
                app:errorEnabled="true"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintHorizontal_bias="0.0"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/fes_phone_number_layout">

                <android.support.design.widget.TextInputEditText
                    android:id="@+id/fes_email"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:hint="@string/staff_email"
                    android:textAppearance="@style/Base.TextAppearance.AppCompat.Subhead" />

            </android.support.design.widget.TextInputLayout>

            <android.support.design.widget.TextInputLayout
                android:id="@+id/fes_address_layout"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginEnd="24dp"
                android:layout_marginStart="24dp"
                app:errorEnabled="true"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintHorizontal_bias="0.0"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/fes_email_layout">

                <android.support.design.widget.TextInputEditText
                    android:id="@+id/fes_address"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:hint="@string/staff_address"
                    android:textAppearance="@style/Base.TextAppearance.AppCompat.Subhead" />

            </android.support.design.widget.TextInputLayout>


        </android.support.constraint.ConstraintLayout>

    </ScrollView>

    <TextView
        android:id="@+id/fes_save_button"
        android:layout_width="256dp"
        android:layout_height="43dp"
        android:layout_marginBottom="24dp"
        android:layout_marginEnd="8dp"
        android:layout_marginStart="8dp"
        android:background="@drawable/button_golden_color_background"
        android:gravity="center"
        android:text="@string/button_save"
        android:textAppearance="@style/Base.TextAppearance.AppCompat.Title"
        android:textColor="@color/white"
        app:layout_constraintBottom_toTopOf="@+id/fes_delete_button"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent" />

    <TextView
        android:id="@+id/fes_delete_button"
        android:layout_width="256dp"
        android:layout_height="43dp"
        android:layout_marginBottom="24dp"
        android:layout_marginEnd="8dp"
        android:layout_marginStart="8dp"
        android:layout_marginTop="8dp"
        android:background="@drawable/button_golden_color_background"
        android:gravity="center"
        android:text="@string/button_delete"
        android:textAppearance="@style/Base.TextAppearance.AppCompat.Title"
        android:textColor="@color/white"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="1.0" />

    <ProgressBar
        android:id="@+id/fes_progress_bar"
        style="?android:attr/progressBarStyleLarge"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="8dp"
        android:layout_marginEnd="8dp"
        android:layout_marginStart="8dp"
        android:layout_marginTop="8dp"
        android:visibility="gone"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

</android.support.constraint.ConstraintLayout>